dynamically_typed_tests/invalid/variables/became_valid/basicTypeErr12.wacc
# type mismatch: string <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  s = 'h'
end
